--- a/AB_tDCS-EEG.Rmd
+++ b/AB_tDCS-EEG.Rmd
@@ -16,6 +16,7 @@ output:
 library(tidyverse)  # importing, transforming, and visualizing data frames
 library(here) # (relative) file paths
 library(knitr) # R notebook output
+library(scales) # Percentage axis labels 
 library(broom) # transform model outputs into data frames
 library(afex) # analysis of factorial experiments (repeated measures anova)
 library(emmeans); afex_options(emmeans_model = "multivariate") # post-hoc tests / contrasts, based on multivariate model
@@ -63,9 +64,9 @@ The data has the following columns:
 * __block__: Whether data is before (`pre), during (`tDCS`) or after (`post`) tDCS
 * __lag__: Whether T2 followed T1 after two distractors (lag `3`) or after 7 distractors (lag `8`)
 * __trials__: Number of trials per lag that the participant completed in this block
-* __T1__: Percentage of trials (out of `trials`) in which T1 was identified correctly
-* __T2__: Percentage of trials (out of `trials`) in which T2 was identified correctly
-* __T2.given.T1__: Percentage of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
+* __T1__: Proportion of trials (out of `trials`) in which T1 was identified correctly
+* __T2__: Proportion of trials (out of `trials`) in which T2 was identified correctly
+* __T2.given.T1__: Proportion of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
 
 ## Study 1
 
@@ -109,7 +110,6 @@ Now we'll reformat the data to match the data frame for study 2:
 df_study1 <- data_study1_fromDisk %>%
   select(fileno, First_Session, ends_with("_NP"), -contains("Min")) %>% # keep only relevant columns
   gather(key, accuracy, -fileno, -First_Session) %>% # make long form
-  mutate(accuracy = accuracy * 100) %>% # convert from proportion to percentage correct
   # split key column to create separate columns for each factor
   separate(key, c("block", "stimulation", "target", "lag"), c(1,3,5)) %>% # split after 1st, 3rd, and 5th character
   # convert to factors, relabel levels to match those in study 2
@@ -133,14 +133,14 @@ kable(head(df_study1,19), digits = 1, caption = "Data frame for study 1")
 ```{r plot lines function}
 plot_lines <- function(df) {
   df %>%
-  gather(target, percentage_correct, T1, T2.given.T1) %>% # so T1 vs. T2|T1 can be used as a factor
+  gather(target, proportion_correct, T1, T2.given.T1) %>% # so T1 vs. T2|T1 can be used as a factor
   
-  ggplot(aes(lag, percentage_correct, color = block, linetype = target)) +
+  ggplot(aes(lag, proportion_correct, color = block, linetype = target)) +
   facet_wrap(~stimulation) +
   stat_summary(fun.y = mean, geom = "line", aes(group = interaction(target,block)), position = position_dodge(width = 0.2)) +
   stat_summary(fun.data = mean_se, geom = "errorbar", position = position_dodge(width = 0.2)) +
   scale_x_discrete("Lag") +
-  scale_y_continuous("Percentage correct", limits = c(0,100), breaks = seq(0,100,10))
+  scale_y_continuous("Percentage correct", limits = c(0,1), breaks = seq(0,1,.1), labels = scales::percent_format())
 }
 ```
 
@@ -168,7 +168,7 @@ __Stray observations:__
 
 ### Study 1 - T2|T1
 
-* __DV__: `T2.given.T1`: Percentage of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
+* __DV__: `T2.given.T1`: Proportion of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
 * __Between-subject factor__: `first.session`, 2 levels: Whether participant received _anodal_ or _cathodal_ tDCS in the first session. Codes for session order.
 * __Within-subject factors__: 
   1. `block`, 3 levels: Whether data is before (_pre_), during (_tDCS_) or after (_post_) tDCS 
@@ -239,7 +239,7 @@ Seems that the crossover interaction (the learning effect) is mostly present in 
 
 ### Study 2 - T2|T1
 
-* __DV__: `T2.given.T1`: Percentage of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
+* __DV__: `T2.given.T1`: Proportion of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
 * __Within-subject factors__: 
   1. `block`, 3 levels: Whether data is before (_pre_), during (_tDCS_) or after (_post_) tDCS 
   2. `stimulation`, 2 levels: Whether participant received _anodal_ or _cathodal_ tDCS
@@ -347,7 +347,7 @@ However, all in all, I favor the 1st interpretation of the four-way interaction 
 
 ### Study 2 - T1
 
-* __DV__: `T1`: Percentage of trials in which T1 was identified correctly.
+* __DV__: `T1`: Proportion of trials in which T1 was identified correctly.
 * __Between-subject factor__: `first.session`, 2 levels: Whether participant received _anodal_ or _cathodal_ tDCS in the first session. Codes for session order.
 * __Within-subject factors__: 
   1. `block`, 3 levels: Whether data is before (_pre_), during (_tDCS_) or after (_post_) tDCS 
@@ -458,8 +458,8 @@ plot_change_from_baseline <- function(df)
   geom_smooth(method = "lm") +
   geom_point() +
   geom_rug() +
-  scale_x_continuous("Baseline AB magnitude (%)", breaks = seq(0,100,20), limits = c(0,100)) +
-  scale_y_continuous("Change in AB magnitude (%)", breaks = seq(-40,40,10), limits = c(-40,40))
+  scale_x_continuous("Baseline AB magnitude (%)", breaks = seq(0,1,.2), limits = c(0,1), labels = scales::percent_format(accuracy = 1)) +
+  scale_y_continuous("Change in AB magnitude (%)", breaks = seq(-.4,.4,.1), limits = c(-.4,.4), labels = scales::percent_format(accuracy = 1))
 ```
 
 ### Study 1
@@ -606,8 +606,8 @@ plot_anodalVScathodal <- function(df) {
     geom_smooth(method = "lm") +
     geom_point() +
     geom_rug() +
-    scale_x_continuous("Effect of anodal tDCS (%)", limits = c(-40,40), breaks = seq(-40,40,10) ) +
-    scale_y_continuous("Effect of cathodal tDCS (%)", limits = c(-40,40), breaks = seq(-40,40,10) ) +
+    scale_x_continuous("Effect of anodal tDCS (%)", limits = c(-.4,.4), breaks = seq(-.4,.4,.1), labels = scales::percent_format(accuracy = 1)) +
+    scale_y_continuous("Effect of cathodal tDCS (%)", limits = c(-.4,.4), breaks = seq(-.4,.4,.1), labels = scales::percent_format(accuracy = 1) ) +
     coord_equal()
 }
 ```
